[gd_scene load_steps=3 format=3 uid="uid://b0afqt5rfgdm7"]

[ext_resource type="Theme" uid="uid://cicb48pw2aaym" path="res://Themes/Default_ui.tres" id="1_r4vne"]
[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="2_hb42d"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_r4vne")
script = ExtResource("2_hb42d")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="Play" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="Tutorial" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Tutorial"

[node name="Config" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Config"

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Config" to="." method="_on_config_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
